# rag-poc

./: .gitignore  Justfile  README.md  pyproject.toml  ruff.toml
app/text_embedding/: main.py  requirements.txt
app/text_embedding/functions/: llama_index_split.py  openai_embed.py
dataset/original/Văn bản pháp luật - Ngân hàng nhà nước Việt Nam/: Luật 17.2017.QH14.docx  Luật 32.2024.QH15.docx  Luật 42.2017.QH14.docx
dataset/preprocessed/Văn bản pháp luật - Ngân hàng nhà nước Việt Nam/: Luật 17.2017.QH14.md  Luật 32.2024.QH15.md  Luật 42.2017.QH14.md
demo/: embed.py
docker/: docker-compose.yml  llm.yaml
